--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,4 @@
-# Copyright 2022 Manna Harbour
-# https://github.com/manna-harbour/miryoku
-
-name: 'Build Example corne nice_nano display'
+name: 'Build Chocofi Bry'
 on: workflow_dispatch
 jobs:
   build:
@@ -10,4 +7,5 @@ jobs:
     with:
       board: '["nice_nano"]'
       shield: '["corne_left","corne_right"]'
+      custom_config: '["#define MIRYOKU_LAYOUTMAPPING_MINIDOX"]'
       kconfig: '["CONFIG_ZMK_DISPLAY=y"]'
