--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,3 +9,6 @@ jobs:
       shield: '["corne_left nice_view_adapter nice_view","corne_right nice_view_adapter nice_view"]'
       custom_config: '["#define MIRYOKU_LAYOUTMAPPING_MINIDOX"]'
       kconfig: '["CONFIG_BT_CTLR_TX_PWR_PLUS_8=y"]'
+      alphas: '["qwerty"]'
+      extra: '["qwerty"]'
+      tap: '["qwerty"]'
